--- a/Sass/_default.scss
+++ b/Sass/_default.scss
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap');
 
 @font-face {
-    font-family: 'Odin';
-    src: url('../Font/Norse-Bold.otf');
+    font-family: 'Zeus';
+    src: url('../Font/Norse-Bold.otf') format('opentype');
 }
 
-:root {
+*,*::after,*::before {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
