--- a/Sass/_variables.scss
+++ b/Sass/_variables.scss
@@ -1,4 +1,5 @@
 $aside-font-color: hsl(0, 0%, 91%);
 $greyish-background: hsl(0, 0%, 95%);
 $label-font-color: hsl(0, 0%, 20%);
-$box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+$box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+$button-color: hsl(231, 24%, 43%);
