--- a/Sass/_variables.scss
+++ b/Sass/_variables.scss
@@ -2,4 +2,6 @@ $aside-font-color: hsl(0, 0%, 91%);
 $greyish-background: hsl(0, 0%, 95%);
 $label-font-color: hsl(0, 0%, 20%);
 $box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+$input-subtle-box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 $button-color: hsl(231, 24%, 43%);
+$error-color: hsl(0, 78%, 47%);
