--- a/Sass/styles.scss
+++ b/Sass/styles.scss
@@ -1,21 +1,24 @@
 @use 'default' as *;
 @use 'variables' as *;
+@use 'mixins' as *;
+@use 'responsive' as *;
 
 body {
     display: flex;
-    height: 100vh;
+    height: 100%;
 }
 
 aside {
     background-image: url('../images/jonny-mckenna-4igCpD-Lnfg-unsplash.jpg');
     background-size: cover;
-    height: 100%;
+    height: 100vh;
     width: 80vw;
     color: $aside-font-color;
 
     .zeus-image {
         display: flex;
         justify-content: space-evenly;
+        align-items: center;
         background-color: hsla(0, 2%, 11%, 0.1);
         font-size: 8rem;
         margin-top: 18rem;
@@ -27,11 +30,14 @@ aside {
     .atribution {
         margin-top: 25rem;
         text-align: center;
+        a {
+            @include link(hsl(231, 26%, 61%));
+        }
     }
 }
 
 main {
-    height: 100%;
+    height: 100vh;
     background-color: $greyish-background;
     .intro {
         //box-sizing: content-box;
@@ -116,13 +122,14 @@ main {
             margin-top: 1rem;
 
             a {
-                &:link {
+                @include link;
+                /*&:link {
                     color: $button-color;
                     text-decoration: none;
                 }
                 &:visited {
                     @extend :link;
-                }
+                }*/
             }
         }
     }
