--- a/Sass/_responsive.scss
+++ b/Sass/_responsive.scss
@@ -43,7 +43,7 @@
                 column-gap: 60px;
             }
             .atribution {
-                margin-top: 4.5rem;
+                margin-top: 2.5rem !important;
             }
         }
         main {
@@ -51,7 +51,7 @@
                 width: 300px !important;
             }
             .container {
-                margin-bottom: 2.5rem !important;
+                margin-bottom: 0.4rem !important;
             }
             .below-container {
                 display: flex;
@@ -71,7 +71,9 @@
 
 @media (max-width: 999px) {
     body {
+        height: 115vh !important;
         main {
+            height: 115vh !important;
             .widget-container {
                 column-gap: 70px !important;
             }
@@ -82,9 +84,10 @@
     }
 }
 
-@media (max-width: 690px) {
+@media (max-width: 750px) {
     body {
         main {
+            height: 140vh !important;
             .widget-container {
                 column-gap: 20px !important;
                 width: 100% !important;
@@ -102,5 +105,41 @@
 @media (max-width: 450px) {
     main {
         height: 170vh !important;
+    }
+}
+
+@media (max-height: 1550px) {
+    aside {
+        .atribution {
+            margin-top: 23rem !important;
+        }
+    }
+}
+
+@media (max-height: 1300px) {
+    aside {
+        .atribution {
+            margin-top: 20rem !important;
+        }
+    }
+    main {
+        .container {
+            margin-bottom: 1rem !important;
+        }
+    }
+}
+
+@media (max-height: 1000px) {
+    
+    body {
+        height: 110vh !important;
+    }
+
+    main {
+        height: 110vh !important;
+    }
+    
+    aside {
+        height: 100% !important;
     }
 }
